--- a/witchie/witchie/Resources/fr.lproj/Localizable.strings
+++ b/witchie/witchie/Resources/fr.lproj/Localizable.strings
@@ -7,13 +7,16 @@
 */
 
 //START GAME VIEW
-"begin_game" = "démarrer";
-"about_us" = "à propos";
+"begin_game" = "Démarrer";
+"about_us" = "À propos";
 
 //ABOUT US VIEW
 //Jogo vencedor do Swift Student Challenge 2023 🥇
 "wwdc2023_winner" = "Jeu gagnant du Swift Student Challenge 2023 🥇";
 "creator" = "Créateur";
+"game_designer" = "Game Designer";
+"designer" = "Designer";
+"dev" = "Dév";
 
 //OTHERS
 "level" = "Niveau";
@@ -23,7 +26,7 @@
 
 //MARK: ONBOARDING TEXTS
 //Ei, você aí, vamos ser diretos porque tô sem tempo pra conversa fiada.\n\n Eu sou a Witchie.
-"text_onboarding1" = "Hé, toi là-bas, soyons directs car je n'ai pas le temps pour les bavardages. Je suis Witchie";
+"text_onboarding1" = "Hé, toi là-bas, soyons directs car je n'ai pas le temps pour les bavardages.\n\n Je suis Witchie";
 //Alguém encheu meu covil de feitiços irritantes e eles estão sabotando a Vassorilda.
 "text_onboarding2" = "Quelqu'un a rempli mon antre de sorts agaçants et ils sabotent Vassorilda.";
 //Felizmente, sou muito esperta e sei como resolver: basta colocar meus caldeirões em cima das marcas mágicas para neutralizá-las.
