[Localizable.strings] Fix typo and improve clarity in level dialogue.

--- a/witchie/witchie/Resources/es.lproj/Localizable.strings
+++ b/witchie/witchie/Resources/es.lproj/Localizable.strings
@@ -64,7 +64,7 @@
 //Eu nem sabia que eu tinha tanto caldeirão assim, acho que vou fazer um bazar.
 "level_dialogue_13" = "Ni siquiera sabía que tenía tantos calderos, creo que haré una venta de garaje.";
 //Eita quanta correria pra lá e pra cá, chega tô tontinha!
-"level_dialogue_14" = "¡Vaya, tanta carrera de un lado a otro, incluso me siento un poco mareado/a!";
+"level_dialogue_14" = "¡Vaya, tanta carrera de un lado a otro, incluso me siento un poco mareada!";
 //Eu acho que nunca vi ninguém apertar tanto aquele botão, deve tá até emperrado agora.
 "level_dialogue_15" = "Creo que nunca había visto a alguien presionar el botón de actualización tantas veces, ahora podría estar atascado.";
 //Ok, essa foi um respiro de tranquilidade depois desses últimas salas tão intensas.
